using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Chess.Pieces
{
    public class Rook : Piece
    {
        public override List<Tile> PossibleMoves()
        {
            throw new System.NotImplementedException();
        }
    }
}