using System.Collections.Generic;
using Chess.Pieces;
using UnityEngine;

namespace Chess
{
    public class Player : MonoBehaviour
    {
        public List<Piece> Pieces = new List<Piece>();
        public Piece SelectedPiece;
        public Tile ClickedTile;
    }
}